# cosmic-notifications-ng

./: CHANGELOG.md  Cargo.toml  README.md  TESTING.md  flake.nix
.agent-os/specs/2026-02-01-rich-notifications/: spec.md  tasks.md
cosmic-ext-notifications-util/src/: lib.rs  link_detector.rs  sanitizer.rs
cosmic-notifications-config/: Cargo.toml
cosmic-notifications-config/src/: lib.rs
cosmic-notifications-util/: Cargo.toml
cosmic-notifications-util/src/: action.rs  action_parser.rs  animated_image.rs  audio.rs  lib.rs  link.rs  link_detector.rs  markup_parser.rs  notification_image.rs  rich_content.rs  sanitizer.rs  urgency.rs  urgency_style.rs
cosmic-notifications-util/tests/: audio_concurrency_tests.rs  dbus_integration_tests.rs
data/: com.system76.CosmicNotifications.service  justfile  org.freedesktop.Notifications.service
docs/: APPLET_INTEGRATION.md  COMPREHENSIVE_RESEARCH_REPORT.md  PERFORMANCE.md
docs/screenshots/: README.md
i18n/id/: cosmic_notifications.ftl
nix/: INTEGRATION.md  QUICKSTART.md  README.md  example-configuration.nix  module.nix  test.nix
scripts/: test_rich_notifications.sh
src/: app.rs  constants.rs  main.rs
src/handlers/: messages.rs
src/rendering/: cards.rs
src/state/: notifications.rs
src/subscriptions/: applet.rs  notifications.rs
src/widgets/: action_buttons.rs  image_animator.rs  linkified_text.rs  mod.rs  notification_image.rs  progress_bar.rs  rich_card.rs
