[package]
name = "cosmic-notifications-util"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["zbus_notifications", "audio"]
zbus_notifications = ["image", "zbus"]
image = ["dep:image", "fast_image_resize"]
audio = ["dep:rodio"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
zbus = { version = "5.11.0", optional = true }
fast_image_resize = { version = "5.1.4", optional = true }
image = { version = "0.25", optional = true }
tracing = "0.1.41"
url = "2.5.7"
ammonia = "4"
regex = "1"
once_cell = "1.19"
linkify = "0.10"
open = "5"
rodio = { version = "0.20", optional = true, default-features = false, features = ["symphonia-all"] }

[dev-dependencies]
serde_json = "1.0"
